--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<script src="script.js">
+</script>
+<link rel="shorcut icon" href="favicon.ico">
+<link rel="stylesheet" href="style.css">
+<title>Hare</title>
+</head>
+<body onload="loaded();" onerror="error();">
+<div id="loader">
+</div>
+<div id="top-nav">
+</div>
+<div id="side-bar">
+</div>
+<div id="main">
+</div>
+<div id="footer">
+</div>
+</body>
