--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -9,6 +9,7 @@
 </head>
 <body onload="loaded();" onerror="error();">
 <div id="loader">
+Loading
 </div>
 <div id="top-nav">
 </div>
@@ -18,4 +19,6 @@
 </div>
 <div id="footer">
 </div>
+<script src="script.js">
+</script>
 </body>
