--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -12,6 +12,11 @@
 Loading
 </div>
 <div id="top-nav">
+<center>
+<a href="" style="color: #777;">Home</a>
+<a href="">Software</a>
+<br><br>
+</center>
 </div>
 <div id="side-bar">
 </div>
