css fixes and overlay

--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -9,12 +9,17 @@
 </head>
 <body onload="loaded();" onerror="error();">
 <div id="loader">
+<br><br><br>
+<br><br><br><center>
+<img src="loading.gif"></img>
+<h1 id="load-text" style="color: #fff;">
 Loading
+</h1></center>
 </div>
 <div id="top-nav">
 <center>
-<a href="" style="color: #777;">Home</a>
-<a href="">Software</a>
+<a href="">Home</a>
+<a href="Software.html">Software</a>
 <br><br>
 </center>
 </div>
