--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Hare</title>
 <script src="script.js">
 </script>
 <link rel="shorcut icon" href="favicon.ico">
@@ -24,6 +25,8 @@ Loading
 </center>
 </div>
 <div id="side-bar">
+<iframe src="featured.html"></iframe>
+Hare has many softwares which are easy to use.
 </div>
 <div id="main">
 </div>
