--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -23,11 +23,14 @@ Loading
 <br><br>
 </center>
 </div>
+<br><br><br><br>
 <div id="side-bar">
-<iframe src="featured.html"></iframe>
-Hare has many softwares which are easy to use.
+<a href="Tests/">What we are working on</a>
+<a href="develope/">Our devolopers</a>
 </div>
 <div id="main">
+<iframe src="featured.html"></iframe>
+Hare has many softwares which are easy to use.
 </div>
 <div id="footer">
 </div>
