--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -16,6 +16,9 @@
 Loading
 </h1></center>
 </div>
+<div id="featured">
+<iframe src="featured.html"></iframe>
+</div>
 <div id="top-nav">
 <center>
 <a href="">Home</a>
@@ -29,8 +32,6 @@ Loading
 <a href="develope/">Our devolopers</a>
 </div>
 <div id="main">
-<iframe src="featured.html"></iframe>
-Hare has many softwares which are easy to use.
 </div>
 <div id="footer">
 </div>
