--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -29,7 +29,7 @@ Loading
 <br><br><br><br>
 <div id="side-bar">
 <a href="Tests/">What we are working on</a>
-<a href="develope/">Our devolopers</a>
+<a href="developers/">Our devolopers</a>
 </div>
 <div id="main">
 </div>
