--- a/user/vidyutsid/projects/custom website/developers.html
+++ b/user/vidyutsid/projects/custom website/developers.html
@@ -4,7 +4,7 @@
 <title>Developers</title>
 <script src="developers.js"></script>
 <link rel="stylesheet" href="developers.css">
-<link rel="stylesheet" href="otherstyle.css">
+<link rel="stylesheet" href="otherstyles.css">
 </head>
 <body>
 <div id="card" class="card">Keshuook</div><br>
