--- a/user/vidyutsid/projects/custom website/developers.html
+++ b/user/vidyutsid/projects/custom website/developers.html
@@ -9,7 +9,7 @@
 <body>
 <div id="card" class="card">Keshuook</div><br>
 <div id="card2" class="card">vidyutsid</div>
-<div id="info">vidyutsid</div>
+<div id="info">Hover over the developer for more details</div>
 <script src="developers.js"></script>
 </body>
 </html>
