update:we show you the current version of the aplication

--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -33,7 +33,7 @@ Loading
 </div>
 <div id="main">
   <p><b>We</b> are a group of git colabraters who design websites and make software which are simple in nature by spliting all the html into coponents (minamaizin code).This page was designed with the most simple and understandable structure of code.
-    further updates will be provided later.
+    currunt version:1.12.
 </div>
 <div id="footer">
 </div>
