--- a/user/vidyutsid/projects/custom website/developers.html
+++ b/user/vidyutsid/projects/custom website/developers.html
@@ -7,8 +7,10 @@
 <link rel="stylesheet" href="otherstyles.css">
 </head>
 <body>
-<div id="card" class="card">Keshuook</div><br>
+<div id="cards">
+<div id="card" class="card">Keshuook</div>
 <div id="card2" class="card">vidyutsid</div>
+</div>
 <div id="info">Hover over the developer for more details</div>
 <script src="developers.js"></script>
 </body>
