--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+  <head>
+    <title>software</title>
+    <link rel="stylesheet" href="otherstyles.css">
+  </head>
+  <body>
 
+  </body>
+</html>
