new style sheet

--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -2,6 +2,7 @@
   <head>
     <title>software</title>
     <link rel="stylesheet" href="otherstyles.css">
+    <link rel="stylesheet" href="software.css">
   </head>
   <body>
 
