index.html done

--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -28,14 +28,16 @@ Loading
 </div>
 <br><br><br><br>
 <div id="side-bar">
-<a href="Tests/">What we are working on</a>
+<a href="https://github.com/keshuook/Colabration">What we are working on</a>
 <a href="developers.html">Our devolopers</a>
 </div>
 <div id="main">
   <p><b>We</b> are a group of git colabraters who design websites and make software which are simple in nature by spliting all the html into coponents (minamaizin code).This page was designed with the most simple and understandable structure of code.
-    currunt version:1.12.
+  current version:1.12. You can veiw our projects by clicking on the what we are working on button in the side of this webpage. If you want to colabrate with us click <a href="https://github.com/keshuook/Colabration/blob/master/README.md">here</a>. We have made a few softwares. We our completely opensource. Our projects are mainly in html javascript and css</p>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div id="footer">
+&copy; hare
 </div>
 <script src="script.js">
 </script>
