--- a/user/vidyutsid/projects/custom website/index.html
+++ b/user/vidyutsid/projects/custom website/index.html
@@ -22,7 +22,7 @@ Loading
 <div id="top-nav">
 <center>
 <a href="">Home</a>
-<a href="Software.html">Software</a>
+<a href="software.html">Software</a>
 <br><br>
 </center>
 </div>
