sidenav in software page

--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="software.css">
   </head>
   <body>
-    
+    <div id="mysidenav">
+      <a href="#" id="Home">Home<a>
+    </div>
   </body>
 </html>
