--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="mysidenav">
-      <a href="#" id="Home">Home<a>
+      <a href="index.html" id="Home">Home<a>
     </div>
   </body>
 </html>
