--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
   <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>software</title>
     <link rel="stylesheet" href="otherstyles.css">
     <link rel="stylesheet" href="software.css">
