--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -7,6 +7,9 @@
   <body>
     <div id="mysidenav">
       <a href="index.html" id="Home">Home<a>
+       <a href="developers.html" id="developers">developers</a>
+         <a href="#" id="what">current project</a>
+         <a href=""
     </div>
   </body>
 </html>
