--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -11,7 +11,7 @@
       <a href="index.html" id="Home">Home<a>
        <a href="developers.html" id="developers">developers</a>
          <a href="#" id="what">current project</a>
-         <a href=""
+         <a href="#" id="features">feature</a>
     </div>
   </body>
 </html>
