--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -10,7 +10,7 @@
     <div id="mysidenav">
       <a href="index.html" id="Home">Home<a>
        <a href="developers.html" id="developers">developers</a>
-         <a href="#" id="what" onclick="alert('pathway Error')">current project</a>
+         <a href="https://github.com/keshuook/Colabration" id="what">current project</a>
          <a href="#" id="features" onclick="alert('pathway Error')">feature</a>
     </div>
   </body>
