--- a/user/vidyutsid/projects/custom website/software.html
+++ b/user/vidyutsid/projects/custom website/software.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>software</title>
@@ -11,11 +10,7 @@
 <a href="index.html" id="Home">Home<a>
 <a href="developers.html" id="developers">developers</a>
 <a href="#" id="what">current project</a>
-         <a href=""
-=======
-  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>software</title>
     <link rel="stylesheet" href="otherstyles.css">
     <link rel="stylesheet" href="software.css">
@@ -25,8 +20,10 @@
       <a href="index.html" id="Home">Home<a>
        <a href="developers.html" id="developers">developers</a>
          <a href="https://github.com/keshuook/Colabration" id="what">current project</a>
-         <a href="#" id="features" onclick="alert('pathway Error')">feature</a>
->>>>>>> 3c3e03ecbc3fb0f1346677e6e9a78310c3b03b68
-    </div>
+   </div>
+   <div>
+   <a href="software1.html" style="left: 0;">
+   
+   </a>
   </body>
 </html>
