--- a/user/keshuook/projects/3dgame/index.html
+++ b/user/keshuook/projects/3dgame/index.html
@@ -1,1 +1,10 @@
+<HTMLDOCTYPE!>
+<html>
+<body>
+<canvas id="canvas" height="570" width="1200"></canvas>
+<p id="events"></p>
+<script src="script.js">
+</script>
 
+</body>
+</html>
